fix lighthouse suggestions: syntax color contrast & crossorigin preloads

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -23,7 +23,6 @@ $link-underline-size: 2px;
 
 // Global Colors
 $color-background:   #ffffff;
-$color-gray-background: #fbfbfb;
 $color-text:         #202020;
 $color-medium-dark:  #494949;
 $color-medium:       #5e5e5e;
@@ -31,6 +30,7 @@ $color-medium-light: #757575;
 $color-light:        #d2d2d2;
 $color-kinda-light:  #e3e3e3;
 $color-super-light:  #f4f4f4;
+$color-super-duper-light: #fbfbfb;
 $color-links:        #0e6dc2;
 
 // For nifty color swapping on svg logo hover in components/_header.scss
