--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  background-color: $color-gray-background;   // really just the color of header & footer
+  background-color: $color-super-duper-light;   // really just the color of header & footer
   color: $color-text;
   font-family: $webfont-sans;
   font-kerning: normal;
@@ -54,7 +54,7 @@ hr {
 // all code
 code {
   font-family: $webfont-mono;
-  background: $color-super-light;
+  background: $color-super-duper-light;
   font-size: 0.95em;
   letter-spacing: 0;
   page-break-inside: avoid;
@@ -66,7 +66,7 @@ code {
 
 // code fences
 div.highlight {
-  background: $color-super-light;
+  background: $color-super-duper-light;
   border: 1px solid $color-light;
   border-left: 3px solid $color-links;
   line-height: 1.6;
