--- a/assets/sass/components/_syntax.scss
+++ b/assets/sass/components/_syntax.scss
@@ -9,7 +9,7 @@ div.highlight span {
     color: #111111;
   }
   &.na, &.nc, &.nd, &.ne, &.nf, &.nx {
-    color: #489c44;
+    color: #068200;
   }
   &.err, &.nt, &.o, &.ow, &.kn {
     color: #e8003d;
@@ -18,7 +18,7 @@ div.highlight span {
     color: #8145ec;
   }
   &.ld, &.s, &.sa, &.sb, &.sc, &.dl, &.sd, &.s2, &.sh, &.si, &.sx, &.sr, &.s1, &.ss {
-    color: #c17005;
+    color: #b35c00;
   }
   &.c, &.ch, &.cm, &.c1, &.cs, &.cp, &.cpf {
     color: #6b6859;
